# MScDisseration

./: .gitignore  README.md  pyproject.toml  runner.sh  runner_raspi.sh
src/: clustering_analysis.py  combine_data.py  combine_labels.py  combine_results.py  main.py
src/analysis/: bootstrap.py  brainstorming.py  clustering_analysis.py  co_occurrence.py  infoshield_results.py  infoshield_script.sh  labeling_similarity.py  labelling.py  summary_stats.py
src/analysis/utils/: calc_cluster_errors.py
src/common/: config.py  functions.py  scraping.py
src/eda/: fullData.py  noDesc.py  noJob.py  translation.py  unMerged.py
src/export/: save_results.py
src/file/: combine_results.py  load_results.py  save_results.py
src/scraping/: config.py  init.py  jooble.py
