[tool.poetry]
name = "mscdisseration"
version = "0.1.0"
description = ""
authors = ["Marcell O <omarcell@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
numpy = "^1.24.1"
pandas = "^1.5.2"
logging = "^0.4.9.6"
bs4 = "^0.0.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
