[tool.poetry]
name = "MScDissertation"
version = "0.1.0"
description = ""
authors = ["Marcell O <omarcell@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
numpy = "^1.24.1"
pandas = "^1.5.2"
logging = "^0.4.9.6"
bs4 = "^0.0.1"
click = "^8.1.3"
Django = "^4.2.2"
lxml = "^4.9.2"
deepl = "^1.15.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
deep-translator = "^1.11.1"
gcld3 = "^3.0.13"
openpyxl = "^3.1.2"
seaborn = "^0.12.2"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
